--- a/index.html
+++ b/index.html
@@ -158,30 +158,51 @@
     }
 
 
-    function bar_plot(n_pig, times){
-      console.log("bar");
-      var xValues = n_pig
-      var yValues = times
-      var barColors = ["red", "green","blue","orange","brown"];
-      
-      new Chart("myChart", {
-        type: "bar",
-        data: {
-          labels: xValues,
-          datasets: [{
-            backgroundColor: barColors,
-            data: yValues
-          }]
-        },
-        options: {
-          legend: {display: false},
-          title: {
+    function bar_plot(n_pig, times) {
+  console.log("bar");
+  var xValues = n_pig;
+  var yValues = times;
+  var barColors = ["red", "green", "blue", "orange", "brown"];
+
+  new Chart("myChart", {
+    type: "bar",
+    data: {
+      labels: xValues,
+      datasets: [{
+        backgroundColor: barColors,
+        data: yValues
+      }]
+    },
+    options: {
+      legend: {
+        display: false
+      },
+      title: {
+        display: true,
+        text: "การลุกนั่งของหมู"
+      },
+      scales: {
+        xAxes: [{
+          scaleLabel: {
             display: true,
-            text: "การลุกนั่งของหมู"
+            labelString: "ลำดับของแม่หมู"
           }
-        }
-      });
+        }],
+        yAxes: [{
+          scaleLabel: {
+            display: true,
+            labelString: "จำนวนการลุกนั่ง"
+          },
+          ticks: {
+            beginAtZero: true
+          }
+        }]
+      }
     }
+  });
+}
+
+
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
 
       const firebaseConfig = {
