--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
     <div class="container mt-3">
       <table class="table table-dark">
         <thead>
-          <th>Date</th>
-          <th>Time</th>
-          <th>n</th>
-          <th>Status Change No.</th>
+          <th style="width: 40%;">Date</th>
+          <th style="width: 30%;">n</th>
+          <th style="width: 30%;">Status Change No.</th>
         </thead>
         <tbody id="tbody1"></tbody>
       </table>
@@ -90,22 +89,20 @@
       var pigNo = 0;
       var tbody = document.getElementById("tbody1");
 
-      function AddItemToTable(date, time, n_, status){
+      function AddItemToTable(date, n_, status){
         let trow = document.createElement("tr")
         let td1 = document.createElement("td");
         let td2 = document.createElement("td");
         let td3 = document.createElement("td");
-        let td4 = document.createElement("td")
+
 
         td1.innerHTML = date;
-        td2.innerHTML = time;
-        td3.innerHTML = n_;
-        td4.innerHTML = status;
+        td2.innerHTML = n_;
+        td3.innerHTML = status;
 
         trow.appendChild(td1);
         trow.appendChild(td2);
         trow.appendChild(td3);
-        trow.appendChild(td4);
 
         tbody.append(trow);
       }
@@ -151,7 +148,7 @@
 
 
         for(let i=0; i<length; i++){
-            AddItemToTable(date_from_p, date, total_pig_array[i], countArray[i]);
+            AddItemToTable(date_from_p, total_pig_array[i], countArray[i]);
         } 
         bar_plot(total_pig_array, countArray);
       }
@@ -159,48 +156,46 @@
 
 
     function bar_plot(n_pig, times) {
-  console.log("bar");
-  var xValues = n_pig;
-  var yValues = times;
-  var barColors = ["red", "green", "blue", "orange", "brown"];
+      console.log("bar");
+      var xValues = n_pig;
+      var yValues = times;
+      var barColors = ["red", "green", "blue", "orange", "brown"];
 
-  new Chart("myChart", {
-    type: "bar",
-    data: {
-      labels: xValues,
-      datasets: [{
-        backgroundColor: barColors,
-        data: yValues
-      }]
-    },
-    options: {
-      legend: {
-        display: false
-      },
-      title: {
-        display: true,
-        text: "การลุกนั่งของหมู"
-      },
-      scales: {
-        xAxes: [{
-          scaleLabel: {
+      new Chart("myChart", {
+        type: "bar",
+        data: {
+          labels: xValues,
+          datasets: [{
+            backgroundColor: barColors,
+            data: yValues
+          }]
+        },
+        options: {
+          
+          title: {
             display: true,
-            labelString: "ลำดับของแม่หมู"
-          }
-        }],
-        yAxes: [{
-          scaleLabel: {
-            display: true,
-            labelString: "จำนวนการลุกนั่ง"
+            text: "การลุกนั่งของหมู"
           },
-          ticks: {
-            beginAtZero: true
+          scales: {
+            xAxes: [{
+              scaleLabel: {
+                display: true,
+                labelString: "ลำดับของแม่หมู"
+              }
+            }],
+            yAxes: [{
+              scaleLabel: {
+                display: true,
+                labelString: "จำนวนการลุกนั่ง"
+              },
+              ticks: {
+                beginAtZero: true
+              }
+            }]
           }
-        }]
-      }
+        }
+      });
     }
-  });
-}
 
 
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
