--- a/allData.html
+++ b/allData.html
@@ -75,10 +75,10 @@
     <div class="container mt-3">
       <table class="table table-dark">
         <thead>
-          <th>Date</th>
-          <th>Time</th>
-          <th>n</th>
-          <th>Status</th>
+          <th style="width: 30%;">Date</th>
+          <th style="width: 30%;">Time</th>
+          <th style="width: 20%;">n</th>
+          <th style="width: 20%;">Status</th>
         </thead>
         <tbody id="tbody1"></tbody>
       </table>
