--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
           }]
         },
         options: {
-          
+          legend: {
+            display: false
+          },
           title: {
             display: true,
             text: "การลุกนั่งของหมู"
