--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="#">Services</a></li>
         </ul>
       </nav>
-      <h1>Pig</h1>
+      <h6>An Internet of Thing Based Real-Time Monitoring System for the Signs of Farrowing in Sows</h6>
     </header>
 
   <div>
